--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,12 @@ mpvMatroska change log
 % changed
 
 
+rev 1 2023-11-22
+& support for MatroskaScript menu -> GotoAndPlay( ChapterUID );
+
+% the Matroska file Title is now always used from the main input file
+
+
 init - 2023-11-10
 
 * Hidden editions are now processed correctly
